# Radium

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
cmake_modules/: FindExecutable.cmake  FindWaylandScanner.cmake
include/Radium/private/backend/wayland/: platformwindow.h
include/RadiumCore/: r_signals_slots  r_signals_slots.h
include/private/backend/wayland/: platformwindow.h
src/: CMakeLists.txt
src/Radium/private/backend/: CMakeLists.txt
src/Radium/private/backend/wayland/: platformwindow.c
src/RadiumCore/: CMakeLists.txt  r_signals_slots.c
src/backend/: CMakeLists.txt
src/backend/wayland/: platformwindow.c
src/core/: CMakeLists.txt  rsignals_slots.c  rsignals_slots.h
src/platform/wayland/: CMakeLists.txt  client.c  client.h  sharedMemory.c  sharedMemory.h
tests/: CMakeLists.txt
tests/backend/: CMakeLists.txt  waylandwindow.c
tests/signals_slots/: CMakeLists.txt  signal_slots_test.c
tests/wayland-client/: CMakeLists.txt  waylandwindow.c
